# stat

./: .gitignore  CMakeLists.txt  Makefile  README.md  distributions.cpp  distributions.h  format.h  portability.cpp  portability.h  stat.cpp  stat.h  stattest.cpp  sysinfo.cpp.in  sysinfo.h
